--- a/Formulario/formulario.css
+++ b/Formulario/formulario.css
@@ -1,7 +1,8 @@
  * {box-sizing: border-box;}
  body{width: 80%; 
      margin: 2em auto;
-     background-color: silver
+     background-color: silver;
+     color: brown
      }
  form{
      background-color: steelblue;
@@ -10,6 +11,10 @@
      background-color: navy;
      color: white;
  } 
+ fieldset{
+     margin: 1em;
+     padding: 1em;
+ }
  div#izq{
      width: 50%;
      float: left;
@@ -34,4 +39,11 @@
   div#cd{
      width: 30%;
      float: left
+ }
+ div.aficiones{
+     width: 50%;
+     float: left;
+ }
+ div.aficiones>input{
+     margin-bottom: 1em;
  }
